@@ -1,3 +1,19 @@
+2009-07-21  Caroline Tice  <ctice@apple.com>
+
+        * inlining.c (restore_thread_inlined_call_stack):  Add calls
+        to inlined_function_update_call_stack, to make sure it's in
+        sync with the threads current pc.
+
+2009-08-28  Caroline Tice  <ctice@apple.com>
+
+        * dbxread.c (objfile_contains_objc):  Add code to check for appropriate
+        section in x86_64 files.
+
+2009-08-24  Jason Molenda  (jmolenda@apple.com)
+
+        * breakpoint.c (bpstat_stop_status): Explicitly run the hand-call
+        cleanups chain after we evaluate the breakpoint's expression.
+
 2009-07-01  Caroline Tice  <ctice@apple.com>
 
         * linespec.c (symbols_found):  Test to make sure canonical is 
